--- a/arch/arm64/boot/dts/samsung/dtbo_exynos.cfg
+++ b/arch/arm64/boot/dts/samsung/dtbo_exynos.cfg
@@ -1,3 +1,3 @@
-exynos9611-m31_eur_open_00.dtbo
-  custom0=0x00000000
-  custom1=0xff000000
+exynos9611-m31_eur_open_01.dtbo
+  custom0=0x00000001
+  custom1=0x000000ff
