add support to build for m31s m21 f41

--- a/arch/arm64/configs/exynos9610-m31snsxx_defconfig
+++ b/arch/arm64/configs/exynos9610-m31snsxx_defconfig
@@ -419,8 +419,8 @@ CONFIG_ARCH_EXYNOS=y
 #
 CONFIG_SOC_EXYNOS9610=y
 CONFIG_ARCH_EXYNOS9=y
-CONFIG_DTBO_M31=y
-# CONFIG_DTBO_M31S is not set
+CONFIG_DTBO_M31S=y
+# CONFIG_DTBO_M31 is not set
 # CONFIG_DTBO_F41 is not set
 # CONFIG_DTBO_M21 is not set
 
@@ -629,7 +629,7 @@ CONFIG_PM_GENERIC_DOMAINS=y
 CONFIG_PM_GENERIC_DOMAINS_SLEEP=y
 CONFIG_PM_GENERIC_DOMAINS_OF=y
 CONFIG_CPU_PM=y
-# CONFIG_SEC_PERF_BIG_AFFINITY_RESUME is not set
+CONFIG_SEC_PERF_BIG_AFFINITY_RESUME=y
 CONFIG_ARCH_HIBERNATION_POSSIBLE=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 
@@ -1494,7 +1494,6 @@ CONFIG_HV_MUIC_VOLTAGE_CTRL=y
 CONFIG_MUIC_SUPPORT_CCIC=y
 CONFIG_MUIC_SUPPORT_POWERMETER=y
 CONFIG_MUIC_SYSFS=y
-# CONFIG_MUIC_SUPPORT_VBUS_BOOST is not set
 # CONFIG_MUIC_SKIP_INCOMPLETE_INSERT is not set
 CONFIG_MUIC_S2MU106=y
 CONFIG_HV_MUIC_S2MU106_AFC=y
@@ -1504,10 +1503,9 @@ CONFIG_MUIC_S2MU106_RID=y
 # CONFIG_NEW_FACTORY_JIGONB is not set
 # CONFIG_NEW_FACTORY_UART is not set
 # CONFIG_MUIC_INCOMPATIBLE_VZW is not set
-CONFIG_MUIC_SM5713=y
-CONFIG_MUIC_BCD_RESCAN=y
-# CONFIG_MUIC_SM5713_BC1_2_CERTI is not set
-CONFIG_HICCUP_CHARGER=y
+# CONFIG_MUIC_SM5713 is not set
+# CONFIG_MUIC_BCD_RESCAN is not set
+# CONFIG_HICCUP_CHARGER is not set
 # CONFIG_MUIC_HV_SUPPORT_POGO_DOCK is not set
 CONFIG_MUIC_SUPPORT_PRSWAP=y
 # CONFIG_IFCONN_MANAGER is not set
@@ -2278,7 +2276,6 @@ CONFIG_PINCTRL=y
 #
 CONFIG_PINMUX=y
 CONFIG_PINCONF=y
-CONFIG_GENERIC_PINCONF=y
 # CONFIG_DEBUG_PINCTRL is not set
 # CONFIG_PINCTRL_AMD is not set
 # CONFIG_PINCTRL_MCP23S08 is not set
@@ -2288,8 +2285,6 @@ CONFIG_PINCTRL_SAMSUNG=y
 CONFIG_PINCTRL_EXYNOS=y
 CONFIG_PINCTRL_EXYNOS_ARM64=y
 # CONFIG_SEC_GPIO_DVS is not set
-CONFIG_PINCTRL_MADERA=y
-CONFIG_PINCTRL_CS47L15=y
 CONFIG_GPIOLIB=y
 CONFIG_OF_GPIO=y
 # CONFIG_DEBUG_GPIO is not set
@@ -2326,7 +2321,6 @@ CONFIG_OF_GPIO=y
 # MFD GPIO expanders
 #
 # CONFIG_GPIO_ARIZONA is not set
-CONFIG_GPIO_MADERA=y
 
 #
 # SPI GPIO expanders
@@ -2676,10 +2670,8 @@ CONFIG_MFD_SYSCON=y
 CONFIG_MFD_ARIZONA=y
 CONFIG_MFD_ARIZONA_I2C=y
 # CONFIG_MFD_ARIZONA_SPI is not set
-CONFIG_MFD_MADERA=y
 # CONFIG_MFD_MADERA_I2C is not set
-CONFIG_MFD_MADERA_SPI=y
-CONFIG_MFD_CS47L15=y
+# CONFIG_MFD_MADERA_SPI is not set
 # CONFIG_MFD_CS47L24 is not set
 # CONFIG_MFD_WM5102 is not set
 # CONFIG_MFD_WM5110 is not set
@@ -2693,7 +2685,7 @@ CONFIG_MFD_CS47L15=y
 # CONFIG_MFD_CS35L41 is not set
 # CONFIG_MFD_CS35L41_SPI is not set
 # CONFIG_MFD_CS35L41_I2C is not set
-CONFIG_MFD_SM5713=y
+# CONFIG_MFD_SM5713 is not set
 CONFIG_REGULATOR=y
 # CONFIG_REGULATOR_DEBUG is not set
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
@@ -2702,8 +2694,6 @@ CONFIG_REGULATOR_FIXED_VOLTAGE=y
 # CONFIG_REGULATOR_ACT8865 is not set
 # CONFIG_REGULATOR_AD5398 is not set
 # CONFIG_REGULATOR_ANATOP is not set
-CONFIG_REGULATOR_ARIZONA_LDO1=y
-CONFIG_REGULATOR_ARIZONA_MICSUPP=y
 # CONFIG_REGULATOR_DA9210 is not set
 # CONFIG_REGULATOR_DA9211 is not set
 # CONFIG_REGULATOR_FAN53555 is not set
@@ -2825,7 +2815,7 @@ CONFIG_CAMERA_CIS_SELECT=y
 # CONFIG_CAMERA_CIS_3H1_C3_OBJ is not set
 # CONFIG_CAMERA_CIS_3J1_OBJ is not set
 # CONFIG_CAMERA_CIS_3L2_OBJ is not set
-# CONFIG_CAMERA_CIS_3L6_OBJ is not set
+CONFIG_CAMERA_CIS_3L6_OBJ=y
 # CONFIG_CAMERA_CIS_3M2_OBJ is not set
 # CONFIG_CAMERA_CIS_3M3_OBJ is not set
 # CONFIG_CAMERA_CIS_3P3_OBJ is not set
@@ -2834,7 +2824,7 @@ CONFIG_CAMERA_CIS_SELECT=y
 # CONFIG_CAMERA_CIS_3P9_OBJ is not set
 # CONFIG_CAMERA_CIS_4H5_OBJ is not set
 # CONFIG_CAMERA_CIS_4H5YC_OBJ is not set
-CONFIG_CAMERA_CIS_4HA_OBJ=y
+# CONFIG_CAMERA_CIS_4HA_OBJ is not set
 # CONFIG_CAMERA_CIS_5E9_OBJ is not set
 # CONFIG_CAMERA_CIS_6B2_OBJ is not set
 # CONFIG_CAMERA_CIS_IMX260_OBJ is not set
@@ -2849,8 +2839,8 @@ CONFIG_CAMERA_CIS_IMX616_OBJ=y
 CONFIG_CAMERA_CIS_GC5035_OBJ=y
 # CONFIG_CAMERA_CIS_HI1336_OBJ is not set
 # CONFIG_CAMERA_CIS_HI2021Q_OBJ is not set
-CONFIG_CAMERA_CIS_GW1_OBJ=y
-# CONFIG_CAMERA_CIS_IMX682_OBJ is not set
+# CONFIG_CAMERA_CIS_GW1_OBJ is not set
+CONFIG_CAMERA_CIS_IMX682_OBJ=y
 # CONFIG_CAMERA_CIS_GD1_OBJ is not set
 # CONFIG_CAMERA_CIS_RPB_OBJ is not set
 # CONFIG_CAMERA_CIS_VIRTUAL_OBJ is not set
@@ -2877,7 +2867,7 @@ CONFIG_CAMERA_FLASH_SELECT=y
 # CONFIG_CAMERA_FLASH_GPIO_OBJ is not set
 # CONFIG_CAMERA_FLASH_I2C_OBJ is not set
 # CONFIG_CAMERA_FLASH_KTD2692_OBJ is not set
-CONFIG_CAMERA_FLASH_SM5713_OBJ=y
+# CONFIG_CAMERA_FLASH_SM5713_OBJ is not set
 CONFIG_CAMERA_FLASH_S2MU106_OBJ=y
 # CONFIG_CAMERA_OIS_SELECT is not set
 CONFIG_CAMERA_COMPANION_CHIP_SELECT=y
@@ -2930,13 +2920,13 @@ CONFIG_FIMC_IS_DDK_DATA_LOAD=y
 # CONFIG_CAMERA_AAS_V80 is not set
 # CONFIG_CAMERA_AAS_V50S is not set
 # CONFIG_CAMERA_MMS_V30S is not set
-CONFIG_CAMERA_MMS_V31=y
+# CONFIG_CAMERA_MMS_V31 is not set
 # CONFIG_CAMERA_MMS_V21 is not set
 # CONFIG_CAMERA_AAS_V51 is not set
 # CONFIG_CAMERA_FXT_V41 is not set
 # CONFIG_CAMERA_XXS_VPRO is not set
 # CONFIG_CAMERA_ATS_V04 is not set
-# CONFIG_CAMERA_MMS_V31S is not set
+CONFIG_CAMERA_MMS_V31S=y
 # CONFIG_SOC_CAMERA is not set
 CONFIG_V4L_MEM2MEM_DRIVERS=y
 # CONFIG_VIDEO_MEM2MEM_DEINTERLACE is not set
@@ -3238,8 +3228,8 @@ CONFIG_LOGGING_BIGDATA_BUG=y
 # CONFIG_EXYNOS_DECON_LCD_S6E3FA9_A51 is not set
 # CONFIG_EXYNOS_DECON_LCD_NT36672A_XCOVERPRO is not set
 # CONFIG_EXYNOS_DECON_LCD_HX83102E_GTA4XL is not set
-CONFIG_EXYNOS_DECON_LCD_EA8076_M31=y
-# CONFIG_EXYNOS_DECON_LCD_EA8076_M31S is not set
+# CONFIG_EXYNOS_DECON_LCD_EA8076_M31 is not set
+CONFIG_EXYNOS_DECON_LCD_EA8076_M31S=y
 # CONFIG_FB_SSD1307 is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_LCD_CLASS_DEVICE=y
@@ -3354,7 +3344,7 @@ CONFIG_SND_SOC_SAMSUNG=y
 CONFIG_SND_SOC_SAMSUNG_EXYNOS9610=y
 # CONFIG_SND_SOC_SAMSUNG_EXYNOS9610_RT5665_ALC5665 is not set
 CONFIG_SND_SOC_SAMSUNG_VOGUE_RT5665=y
-CONFIG_SND_SOC_SAMSUNG_VOGUE_CS47L15=y
+# CONFIG_SND_SOC_SAMSUNG_VOGUE_CS47L15 is not set
 # CONFIG_SND_SOC_ARNDALE_RT5631_ALC5631 is not set
 # CONFIG_SND_SOC_SAMSUNG_TM2_WM5110 is not set
 CONFIG_SND_SOC_SAMSUNG_AUDIO=y
@@ -3375,7 +3365,6 @@ CONFIG_SND_SOC_I2C_AND_SPI=y
 # CODEC drivers
 #
 CONFIG_SND_RICHTEK_SPM=y
-CONFIG_SND_SOC_WM_ADSP=y
 # CONFIG_SND_SOC_AC97_CODEC is not set
 # CONFIG_SND_SOC_ADAU1701 is not set
 # CONFIG_SND_SOC_ADAU1761_I2C is not set
@@ -3398,7 +3387,7 @@ CONFIG_SND_SOC_WM_ADSP=y
 # CONFIG_SND_SOC_CS42L52 is not set
 # CONFIG_SND_SOC_CS42L56 is not set
 # CONFIG_SND_SOC_CS42L73 is not set
-CONFIG_SND_SOC_CS47L15=y
+# CONFIG_SND_SOC_CS47L15 is not set
 # CONFIG_SND_SOC_CS4265 is not set
 # CONFIG_SND_SOC_CS4270 is not set
 # CONFIG_SND_SOC_CS4271_I2C is not set
@@ -3414,7 +3403,6 @@ CONFIG_SND_SOC_CS47L15=y
 # CONFIG_SND_SOC_ES8328_SPI is not set
 # CONFIG_SND_SOC_GTM601 is not set
 # CONFIG_SND_SOC_INNO_RK3036 is not set
-CONFIG_SND_SOC_MADERA=y
 # CONFIG_SND_SOC_MAX98504 is not set
 # CONFIG_SND_SOC_MAX98927 is not set
 # CONFIG_SND_SOC_MAX9860 is not set
@@ -3907,13 +3895,12 @@ CONFIG_TYPEC=y
 #
 CONFIG_CCIC_S2MU106=y
 CONFIG_PDIC_PD30=y
-# CONFIG_CCIC_AUTO_PPS is not set
+CONFIG_CCIC_AUTO_PPS=y
 
 #
 # SM5713 configs
 #
-CONFIG_CCIC_SM5713=y
-CONFIG_SM5713_FACTORY_MODE=y
+# CONFIG_CCIC_SM5713 is not set
 # CONFIG_SM5713_WATER_DETECTION_ENABLE is not set
 
 #
@@ -4001,9 +3988,8 @@ CONFIG_LEDS_CLASS=y
 # CONFIG_LEDS_USER is not set
 # CONFIG_LEDS_S2MPB02 is not set
 CONFIG_LEDS_S2MU106_FLASH=y
-CONFIG_LEDS_SM5713=y
+# CONFIG_LEDS_SM5713 is not set
 # CONFIG_LEDS_SM5713_DUAL_LED is not set
-# CONFIG_LEDS_SM5713_RGB is not set
 
 #
 # LED Triggers
@@ -4512,20 +4498,8 @@ CONFIG_ARM_EXYNOS_DEVFREQ_DEBUG=y
 # CONFIG_ARM_EXYNOS_BUS_DEVFREQ is not set
 # CONFIG_PM_DEVFREQ_EVENT is not set
 CONFIG_ARM_EXYNOS9610_BUS_DEVFREQ=y
-CONFIG_EXTCON=y
-
-#
-# Extcon Device Drivers
-#
-# CONFIG_EXTCON_ADC_JACK is not set
+# CONFIG_EXTCON is not set
 # CONFIG_EXTCON_ARIZONA is not set
-# CONFIG_EXTCON_GPIO is not set
-CONFIG_EXTCON_MADERA=y
-CONFIG_EXTCON_MADERA_INPUT_EVENT=y
-# CONFIG_EXTCON_MAX3355 is not set
-# CONFIG_EXTCON_RT8973A is not set
-# CONFIG_EXTCON_SM5502 is not set
-# CONFIG_EXTCON_USB_GPIO is not set
 # CONFIG_MEMORY is not set
 CONFIG_IIO=y
 CONFIG_IIO_BUFFER=y
@@ -4850,7 +4824,6 @@ CONFIG_IRQCHIP=y
 CONFIG_ARM_GIC=y
 CONFIG_ARM_GIC_MAX_NR=1
 CONFIG_ARM_GIC_V3=y
-CONFIG_MADERA_IRQ=y
 CONFIG_PARTITION_PERCPU=y
 # CONFIG_IPACK_BUS is not set
 # CONFIG_RESET_CONTROLLER is not set
@@ -4912,28 +4885,48 @@ CONFIG_EXYNOS9610_BTS=y
 # Battery drivers
 #
 CONFIG_BATTERY_SAMSUNG=y
-CONFIG_BATTERY_SAMSUNG_V2=y
-# CONFIG_BATTERY_SAMSUNG_LEGO_STYLE is not set
+# CONFIG_BATTERY_SAMSUNG_V2 is not set
+CONFIG_BATTERY_SAMSUNG_LEGO_STYLE=y
 # CONFIG_CHARGER_DUMMY is not set
+# CONFIG_CHARGER_PCA9468 is not set
 CONFIG_CHARGER_S2MU106=y
+CONFIG_CHARGER_SM5440=y
 CONFIG_PM_S2MU106=y
+CONFIG_BATTERY_SAMSUNG_DATA_FILE="default_battery_data.h"
+CONFIG_SLOW_CHARGING_CURRENT_STANDARD=1000
+# CONFIG_CHARGING_VZWCONCEPT is not set
 CONFIG_CALC_TIME_TO_FULL=y
 # CONFIG_MULTI_CHARGING is not set
-# CONFIG_STEP_CHARGING is not set
+CONFIG_STEP_CHARGING=y
 # CONFIG_ENABLE_FULL_BY_SOC is not set
+CONFIG_DIRECT_CHARGING=y
 # CONFIG_UPDATE_BATTERY_DATA is not set
 # CONFIG_AFC_CURR_CONTROL_BY_TEMP is not set
 CONFIG_BATTERY_CISD=y
+# CONFIG_PREVENT_SOC_JUMP is not set
 # CONFIG_CS100_JPNCONCEPT is not set
 CONFIG_AFC_CHARGER_MODE=y
 # CONFIG_SAMSUNG_LPM_MODE is not set
+# CONFIG_SAMSUNG_BATTERY_ENG_TEST is not set
+# CONFIG_SAMSUNG_BATTERY_FACTORY is not set
+# CONFIG_DISABLE_SAVE_CAPACITY_MAX is not set
+CONFIG_SIOP_CHARGING_LIMIT_CURRENT=0
 # CONFIG_EN_OOPS is not set
+# CONFIG_USE_POGO is not set
+# CONFIG_MACH_KOR_EARJACK_WR is not set
 # CONFIG_STORE_MODE is not set
 # CONFIG_SW_SELF_DISCHARGING is not set
 CONFIG_BATTERY_AGE_FORECAST=y
 # CONFIG_QH_ALGORITHM is not set
 CONFIG_BATTERY_NOTIFIER=y
+# CONFIG_LIMIT_CHARGING_DURING_CALL is not set
 CONFIG_ENABLE_100MA_CHARGING_BEFORE_USB_CONFIGURED=y
+# CONFIG_TABLET_MODEL_CONCEPT is not set
+# CONFIG_OTG_OVERCURRENT_BY_CHGIN is not set
+# CONFIG_SWITCHING_S2ASL01 is not set
+# CONFIG_DUAL_BATTERY is not set
+# CONFIG_ISDB_CHARGING_CONTROL is not set
+# CONFIG_PREVENT_USB_CONN_OVERHEAT is not set
 # CONFIG_FUELGAUGE_DUMMY is not set
 CONFIG_FUELGAUGE_S2MU106=y
 CONFIG_BATTERY_SWELLING=y
@@ -4949,9 +4942,9 @@ CONFIG_BATTERY_SWELLING=y
 # CONFIG_FUELGAUGE_MAX77854 is not set
 # CONFIG_FUELGAUGE_MAX77865 is not set
 # CONFIG_FUELGAUGE_MAX77705 is not set
-CONFIG_FUELGAUGE_SM5713=y
+# CONFIG_FUELGAUGE_SM5713 is not set
 # CONFIG_FUELGAUGE_S2MU106_USE_5MILLIOHM is not set
-CONFIG_CHARGER_SM5713=y
+# CONFIG_CHARGER_SM5713 is not set
 # CONFIG_CHARGER_SMB328 is not set
 # CONFIG_CHARGER_BQ24157 is not set
 # CONFIG_CHARGER_BQ24191 is not set
@@ -4970,10 +4963,9 @@ CONFIG_CHARGER_SM5713=y
 # CONFIG_WIRELESS_CHARGER_S2MIW03 is not set
 # CONFIG_WIRELESS_CHARGER_MFC is not set
 # CONFIG_WIRELESS_FIRMWARE_UPDATE is not set
-CONFIG_SUPPORT_HV_CTRL=y
+# CONFIG_SUPPORT_HV_CTRL is not set
 CONFIG_SWITCH=y
 # CONFIG_SWITCH_GPIO is not set
-# CONFIG_SWITCH_MADERA is not set
 CONFIG_VISION_SUPPORT=y
 CONFIG_EXYNOS_VIPX=y
 CONFIG_EXYNOS_VIPX_PLATFORM=y
@@ -5072,11 +5064,11 @@ CONFIG_SENSORS_SSP=y
 # CONFIG_SENSORS_SSP_A51 is not set
 # CONFIG_SENSORS_SSP_XCOVERPRO is not set
 # CONFIG_SENSORS_SSP_GTA4XL is not set
-CONFIG_SENSORS_SSP_M31=y
+# CONFIG_SENSORS_SSP_M31 is not set
 # CONFIG_SENSORS_SSP_M21 is not set
-# CONFIG_SENSORS_SSP_M31S is not set
+CONFIG_SENSORS_SSP_M31S=y
 # CONFIG_SENSORS_SSP_GYROFILE_FOR_MAG is not set
-CONFIG_SENSORS_A96T3X6=y
+# CONFIG_SENSORS_A96T3X6 is not set
 # CONFIG_SENSORS_A96T3X6_SUB is not set
 # CONFIG_SENSORS_A96T3X6_WIFI is not set
 # CONFIG_SENSORS_A96T3X6_2CH is not set
@@ -5086,14 +5078,14 @@ CONFIG_SENSORS_A96T3X6=y
 # CONFIG_SENSORS_FW_VENDOR is not set
 # CONFIG_SENSORS_A96T3X6_TABA4XL is not set
 # CONFIG_SENSORS_A96T3X6_M30S is not set
-CONFIG_SENSORS_A96T3X6_M31=y
+# CONFIG_SENSORS_A96T3X6_M31 is not set
 # CONFIG_SENSORS_A96T3X6_A51 is not set
 # CONFIG_SENSORS_A96T3X6_A51_USA is not set
 # CONFIG_SENSORS_TC3XXK is not set
 # CONFIG_SENSORS_SX9360 is not set
 # CONFIG_SENSORS_SX9360_SUB is not set
-# CONFIG_SENSORS_ISG5320A is not set
-# CONFIG_SENSORS_ISG5320A_SUB is not set
+CONFIG_SENSORS_ISG5320A=y
+CONFIG_SENSORS_ISG5320A_SUB=y
 CONFIG_SENSORS_SSP_ACCELOMETER=y
 CONFIG_SENSORS_SSP_GYROSCOPE=y
 CONFIG_SENSORS_SSP_MAGNETIC=y
@@ -5101,16 +5093,16 @@ CONFIG_SENSORS_SSP_MAGNETIC=y
 CONFIG_SENSORS_SSP_LIGHT=y
 # CONFIG_SENSORS_SSP_BAROMETER is not set
 # CONFIG_SENSORS_SSP_MOBEAM is not set
-# CONFIG_SENSORS_SSP_ACCELOMETER_ICM42605M is not set
-CONFIG_SENSORS_SSP_ACCELOMETER_LSM6DSL=y
+CONFIG_SENSORS_SSP_ACCELOMETER_ICM42605M=y
+# CONFIG_SENSORS_SSP_ACCELOMETER_LSM6DSL is not set
 # CONFIG_SENSORS_SSP_ACCELOMETER_K6DS3TR is not set
-# CONFIG_SENSORS_SSP_GYROSCOPE_ICM42605M is not set
-CONFIG_SENSORS_SSP_GYROSCOPE_LSM6DSL=y
+CONFIG_SENSORS_SSP_GYROSCOPE_ICM42605M=y
+# CONFIG_SENSORS_SSP_GYROSCOPE_LSM6DSL is not set
 # CONFIG_SENSORS_SSP_GYROSCOPE_K6DS3TR is not set
-CONFIG_SENSORS_SSP_MAGNETIC_AK09918C=y
+# CONFIG_SENSORS_SSP_MAGNETIC_AK09918C is not set
 # CONFIG_SENSORS_SSP_MAGNETIC_AK09916C is not set
 # CONFIG_SENSORS_SSP_MAGNETIC_LSM303AH is not set
-# CONFIG_SENSORS_SSP_MAGNETIC_MMC5603 is not set
+CONFIG_SENSORS_SSP_MAGNETIC_MMC5603=y
 # CONFIG_SENSORS_SSP_PROXIMITY_AUTO_CAL_TMD3725 is not set
 # CONFIG_SENSORS_SSP_PROXIMITY_STK3X3X is not set
 # CONFIG_SENSORS_SSP_PROXIMITY_GP2AP110S is not set
@@ -5118,10 +5110,10 @@ CONFIG_SENSORS_SSP_MAGNETIC_AK09918C=y
 # CONFIG_SENSORS_SSP_PROXIMITY_FACTORY_CAL_OFFSET is not set
 # CONFIG_SENSORS_SSP_LIGHT_TMD3725 is not set
 # CONFIG_SENSORS_SSP_LIGHT_TMD3700 is not set
-CONFIG_SENSORS_SSP_LIGHT_TCS3701=y
+# CONFIG_SENSORS_SSP_LIGHT_TCS3701 is not set
 # CONFIG_SENSORS_SSP_LIGHT_VEML3328 is not set
 # CONFIG_SENSORS_SSP_LIGHT_CM32183 is not set
-# CONFIG_SENSORS_SSP_LIGHT_STK3X6X is not set
+CONFIG_SENSORS_SSP_LIGHT_STK3X6X=y
 # CONFIG_SENSORS_SSP_CAMERALIGHT_FOR_TAB is not set
 # CONFIG_SENSORS_SSP_BAROMETER_LPS22H is not set
 # CONFIG_SENSORS_SSP_BAROMETER_LPS25H is not set
@@ -5132,10 +5124,10 @@ CONFIG_SENSORS_SSP_LIGHT_TCS3701=y
 # CONFIG_GPS_BCM47531 is not set
 # CONFIG_GPS_BCM4773 is not set
 CONFIG_SEC_VIBRATOR=y
-CONFIG_DC_VIBRATOR=y
+# CONFIG_DC_VIBRATOR is not set
 # CONFIG_ISA1000_VIBRATOR is not set
 CONFIG_VIBRATOR_S2MU106=y
-# CONFIG_VIBRATOR_S2MU106_VOLTAGE_3P3 is not set
+CONFIG_VIBRATOR_S2MU106_VOLTAGE_3P3=y
 CONFIG_SENSORS_FINGERPRINT=y
 CONFIG_SENSORS_ET5XX=y
 # CONFIG_SENSORS_ET7XX is not set
@@ -5204,6 +5196,7 @@ CONFIG_FILE_LOCKING=y
 CONFIG_MANDATORY_FILE_LOCKING=y
 CONFIG_FS_ENCRYPTION=y
 CONFIG_FS_INLINE_ENCRYPTION=y
+CONFIG_FSCRYPT_SDP=y
 CONFIG_FSNOTIFY=y
 CONFIG_DNOTIFY=y
 CONFIG_INOTIFY_USER=y
