--- a/arch/arm64/boot/dts/Makefile
+++ b/arch/arm64/boot/dts/Makefile
@@ -1,7 +1,19 @@
 # SPDX-License-Identifier: GPL-2.0
 dtb-y += exynos/exynos9610.dtb
-dtbo-y += samsung/exynos9611-m31_eur_open_01.dtbo
-dtbo-y += samsung/exynos9611-m31_eur_open_00.dtbo
+
+dtbo-$(CONFIG_DTBO_M31) += \
+        samsung/exynos9611-m31_eur_open_01.dtbo \
+        samsung/exynos9611-m31_eur_open_00.dtbo
+
+dtbo-$(CONFIG_DTBO_M31S) += \
+        samsung/exynos9611-m31s_eur_open_00.dtbo
+
+dtbo-$(CONFIG_DTBO_F41) += \
+        samsung/exynos9611-f41_swa_open_00.dtbo
+
+dtbo-$(CONFIG_DTBO_M21) += \
+        samsung/exynos9611-m21_swa_open_00.dtbo \
+        samsung/exynos9611-m21_swa_open_06.dtbo
 
 targets += dtbs
 DTB_LIST  := $(dtb-y) $(dtbo-y)
