--- a/arch/arm64/configs/exynos9610-f41dd_defconfig
+++ b/arch/arm64/configs/exynos9610-f41dd_defconfig
@@ -419,9 +419,9 @@ CONFIG_ARCH_EXYNOS=y
 #
 CONFIG_SOC_EXYNOS9610=y
 CONFIG_ARCH_EXYNOS9=y
-CONFIG_DTBO_M31=y
+# CONFIG_DTBO_M31 is not set
 # CONFIG_DTBO_M31S is not set
-# CONFIG_DTBO_F41 is not set
+CONFIG_DTBO_F41=y
 # CONFIG_DTBO_M21 is not set
 
 #
@@ -1277,7 +1277,7 @@ CONFIG_ZRAM_LRU_WRITEBACK=y
 CONFIG_ZRAM_LRU_WRITEBACK_LIMIT=5120
 # CONFIG_BLK_DEV_COW_COMMON is not set
 CONFIG_BLK_DEV_LOOP=y
-CONFIG_BLK_DEV_LOOP_MIN_COUNT=16
+CONFIG_BLK_DEV_LOOP_MIN_COUNT=32
 # CONFIG_BLK_DEV_CRYPTOLOOP is not set
 # CONFIG_BLK_DEV_DRBD is not set
 # CONFIG_BLK_DEV_NBD is not set
@@ -2042,7 +2042,6 @@ CONFIG_TOUCHSCREEN_MELFAS_MSS100=y
 # CONFIG_TOUCHSCREEN_NOVATEK_NT36672A is not set
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
-# CONFIG_INPUT_ARIZONA_HAPTICS is not set
 # CONFIG_INPUT_ATMEL_CAPTOUCH is not set
 # CONFIG_INPUT_BMA150 is not set
 # CONFIG_INPUT_E3X0_BUTTON is not set
@@ -2325,7 +2324,6 @@ CONFIG_OF_GPIO=y
 #
 # MFD GPIO expanders
 #
-# CONFIG_GPIO_ARIZONA is not set
 CONFIG_GPIO_MADERA=y
 
 #
@@ -2673,6 +2671,7 @@ CONFIG_MFD_SYSCON=y
 # CONFIG_MFD_LM3533 is not set
 # CONFIG_MFD_TC3589X is not set
 # CONFIG_MFD_TMIO is not set
+# CONFIG_MFD_ARIZONA_I2C is not set
 CONFIG_MFD_ARIZONA=y
 CONFIG_MFD_ARIZONA_I2C=y
 # CONFIG_MFD_ARIZONA_SPI is not set
@@ -2680,11 +2679,6 @@ CONFIG_MFD_MADERA=y
 # CONFIG_MFD_MADERA_I2C is not set
 CONFIG_MFD_MADERA_SPI=y
 CONFIG_MFD_CS47L15=y
-# CONFIG_MFD_CS47L24 is not set
-# CONFIG_MFD_WM5102 is not set
-# CONFIG_MFD_WM5110 is not set
-# CONFIG_MFD_WM8997 is not set
-# CONFIG_MFD_WM8998 is not set
 # CONFIG_MFD_WM8400 is not set
 # CONFIG_MFD_WM831X_I2C is not set
 # CONFIG_MFD_WM831X_SPI is not set
@@ -2930,10 +2924,10 @@ CONFIG_FIMC_IS_DDK_DATA_LOAD=y
 # CONFIG_CAMERA_AAS_V80 is not set
 # CONFIG_CAMERA_AAS_V50S is not set
 # CONFIG_CAMERA_MMS_V30S is not set
-CONFIG_CAMERA_MMS_V31=y
+# CONFIG_CAMERA_MMS_V31 is not set
 # CONFIG_CAMERA_MMS_V21 is not set
 # CONFIG_CAMERA_AAS_V51 is not set
-# CONFIG_CAMERA_FXT_V41 is not set
+CONFIG_CAMERA_FXT_V41=y
 # CONFIG_CAMERA_XXS_VPRO is not set
 # CONFIG_CAMERA_ATS_V04 is not set
 # CONFIG_CAMERA_MMS_V31S is not set
@@ -3356,7 +3350,6 @@ CONFIG_SND_SOC_SAMSUNG_EXYNOS9610=y
 CONFIG_SND_SOC_SAMSUNG_VOGUE_RT5665=y
 CONFIG_SND_SOC_SAMSUNG_VOGUE_CS47L15=y
 # CONFIG_SND_SOC_ARNDALE_RT5631_ALC5631 is not set
-# CONFIG_SND_SOC_SAMSUNG_TM2_WM5110 is not set
 CONFIG_SND_SOC_SAMSUNG_AUDIO=y
 CONFIG_SND_SOC_SAMSUNG_ABOX=y
 # CONFIG_SEC_SND_SYNCHRONIZED_IPC is not set
@@ -4344,6 +4337,9 @@ CONFIG_SEC_ABC_HUB_BOOTC=y
 #
 # CONFIG_SEC_ABC_HUB_BOOTC_ENG is not set
 
+#
+# Samsung LABO Options
+#
 # CONFIG_GOLDFISH is not set
 # CONFIG_CHROME_PLATFORMS is not set
 CONFIG_CLKDEV_LOOKUP=y
@@ -4518,7 +4514,6 @@ CONFIG_EXTCON=y
 # Extcon Device Drivers
 #
 # CONFIG_EXTCON_ADC_JACK is not set
-# CONFIG_EXTCON_ARIZONA is not set
 # CONFIG_EXTCON_GPIO is not set
 CONFIG_EXTCON_MADERA=y
 CONFIG_EXTCON_MADERA_INPUT_EVENT=y
@@ -4931,6 +4926,7 @@ CONFIG_AFC_CHARGER_MODE=y
 # CONFIG_STORE_MODE is not set
 # CONFIG_SW_SELF_DISCHARGING is not set
 CONFIG_BATTERY_AGE_FORECAST=y
+# CONFIG_ENG_BATTERY_CONCEPT is not set
 # CONFIG_QH_ALGORITHM is not set
 CONFIG_BATTERY_NOTIFIER=y
 CONFIG_ENABLE_100MA_CHARGING_BEFORE_USB_CONFIGURED=y
@@ -5038,6 +5034,9 @@ CONFIG_SEC_DEBUG_SOFTDOG=y
 CONFIG_SEC_MISC=y
 # CONFIG_SEC_HQM_DEVICE is not set
 
+#
+# Samsung TSP Logging Options
+#
 CONFIG_SEC_PM_BIGDATA=y
 
 #
