--- a/arch/arm64/configs/exynos9610-m21dd_defconfig
+++ b/arch/arm64/configs/exynos9610-m21dd_defconfig
@@ -106,7 +106,8 @@ CONFIG_TASKSTATS=y
 CONFIG_TASK_DELAY_ACCT=y
 CONFIG_TASK_XACCT=y
 CONFIG_TASK_IO_ACCOUNTING=y
-# CONFIG_PSI is not set
+CONFIG_PSI=y
+# CONFIG_PSI_DEFAULT_DISABLED is not set
 
 #
 # RCU Subsystem
@@ -419,10 +420,10 @@ CONFIG_ARCH_EXYNOS=y
 #
 CONFIG_SOC_EXYNOS9610=y
 CONFIG_ARCH_EXYNOS9=y
-CONFIG_DTBO_M31=y
+CONFIG_DTBO_M21=y
 # CONFIG_DTBO_M31S is not set
 # CONFIG_DTBO_F41 is not set
-# CONFIG_DTBO_M21 is not set
+# CONFIG_DTBO_M31 is not set
 
 #
 # Bus support
@@ -545,7 +546,7 @@ CONFIG_SWAP_ENABLE_READAHEAD=y
 # CONFIG_KANOND is not set
 # CONFIG_BOOT_MEMORY_PARAM is not set
 # CONFIG_PROCESS_RECLAIM is not set
-# CONFIG_FAULT_AROUND_4KB is not set
+CONFIG_FAULT_AROUND_4KB=y
 CONFIG_VMPRESSURE_LEVEL_MED=70
 CONFIG_PAGE_BOOST=y
 CONFIG_PAGE_BOOST_RECORDING=y
@@ -1277,7 +1278,7 @@ CONFIG_ZRAM_LRU_WRITEBACK=y
 CONFIG_ZRAM_LRU_WRITEBACK_LIMIT=5120
 # CONFIG_BLK_DEV_COW_COMMON is not set
 CONFIG_BLK_DEV_LOOP=y
-CONFIG_BLK_DEV_LOOP_MIN_COUNT=16
+CONFIG_BLK_DEV_LOOP_MIN_COUNT=32
 # CONFIG_BLK_DEV_CRYPTOLOOP is not set
 # CONFIG_BLK_DEV_DRBD is not set
 # CONFIG_BLK_DEV_NBD is not set
@@ -2042,7 +2043,6 @@ CONFIG_TOUCHSCREEN_MELFAS_MSS100=y
 # CONFIG_TOUCHSCREEN_NOVATEK_NT36672A is not set
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
-# CONFIG_INPUT_ARIZONA_HAPTICS is not set
 # CONFIG_INPUT_ATMEL_CAPTOUCH is not set
 # CONFIG_INPUT_BMA150 is not set
 # CONFIG_INPUT_E3X0_BUTTON is not set
@@ -2325,7 +2325,6 @@ CONFIG_OF_GPIO=y
 #
 # MFD GPIO expanders
 #
-# CONFIG_GPIO_ARIZONA is not set
 CONFIG_GPIO_MADERA=y
 
 #
@@ -2680,11 +2679,6 @@ CONFIG_MFD_MADERA=y
 # CONFIG_MFD_MADERA_I2C is not set
 CONFIG_MFD_MADERA_SPI=y
 CONFIG_MFD_CS47L15=y
-# CONFIG_MFD_CS47L24 is not set
-# CONFIG_MFD_WM5102 is not set
-# CONFIG_MFD_WM5110 is not set
-# CONFIG_MFD_WM8997 is not set
-# CONFIG_MFD_WM8998 is not set
 # CONFIG_MFD_WM8400 is not set
 # CONFIG_MFD_WM831X_I2C is not set
 # CONFIG_MFD_WM831X_SPI is not set
@@ -2820,7 +2814,7 @@ CONFIG_CAMERA_CIS_SELECT=y
 # CONFIG_CAMERA_CIS_2P8_OBJ is not set
 # CONFIG_CAMERA_CIS_2T7SX_OBJ is not set
 # CONFIG_CAMERA_CIS_2X5_OBJ is not set
-# CONFIG_CAMERA_CIS_GM2_OBJ is not set
+CONFIG_CAMERA_CIS_GM2_OBJ=y
 # CONFIG_CAMERA_CIS_3H1_OBJ is not set
 # CONFIG_CAMERA_CIS_3H1_C3_OBJ is not set
 # CONFIG_CAMERA_CIS_3J1_OBJ is not set
@@ -2844,12 +2838,12 @@ CONFIG_CAMERA_CIS_4HA_OBJ=y
 # CONFIG_CAMERA_CIS_IMX576_OBJ is not set
 # CONFIG_CAMERA_CIS_IMX582_OBJ is not set
 # CONFIG_CAMERA_CIS_IMX586_OBJ is not set
-CONFIG_CAMERA_CIS_IMX616_OBJ=y
+# CONFIG_CAMERA_CIS_IMX616_OBJ is not set
 # CONFIG_CAMERA_CIS_SR259_OBJ is not set
 CONFIG_CAMERA_CIS_GC5035_OBJ=y
 # CONFIG_CAMERA_CIS_HI1336_OBJ is not set
-# CONFIG_CAMERA_CIS_HI2021Q_OBJ is not set
-CONFIG_CAMERA_CIS_GW1_OBJ=y
+CONFIG_CAMERA_CIS_HI2021Q_OBJ=y
+# CONFIG_CAMERA_CIS_GW1_OBJ is not set
 # CONFIG_CAMERA_CIS_IMX682_OBJ is not set
 # CONFIG_CAMERA_CIS_GD1_OBJ is not set
 # CONFIG_CAMERA_CIS_RPB_OBJ is not set
@@ -2862,14 +2856,14 @@ CONFIG_CAMERA_ACT_SELECT=y
 # CONFIG_CAMERA_ACT_DW9780_OBJ is not set
 # CONFIG_CAMERA_ACT_DW9804_OBJ is not set
 # CONFIG_CAMERA_ACT_DW9807_OBJ is not set
-# CONFIG_CAMERA_ACT_DW9808_OBJ is not set
+CONFIG_CAMERA_ACT_DW9808_OBJ=y
 # CONFIG_CAMERA_ACT_DW9823_OBJ is not set
 # CONFIG_CAMERA_ACT_AK7372_OBJ is not set
 # CONFIG_CAMERA_ACT_LC898217_OBJ is not set
 # CONFIG_CAMERA_ACT_AK737X_OBJ is not set
 # CONFIG_CAMERA_ACT_ZC533_OBJ is not set
 # CONFIG_CAMERA_ACT_ZC569_OBJ is not set
-CONFIG_CAMERA_ACT_DW9817_OBJ=y
+# CONFIG_CAMERA_ACT_DW9817_OBJ is not set
 CONFIG_CAMERA_FLASH_SELECT=y
 # CONFIG_CAMERA_FLASH_LM3560_OBJ is not set
 # CONFIG_CAMERA_FLASH_RT5033_OBJ is not set
@@ -2930,8 +2924,8 @@ CONFIG_FIMC_IS_DDK_DATA_LOAD=y
 # CONFIG_CAMERA_AAS_V80 is not set
 # CONFIG_CAMERA_AAS_V50S is not set
 # CONFIG_CAMERA_MMS_V30S is not set
-CONFIG_CAMERA_MMS_V31=y
-# CONFIG_CAMERA_MMS_V21 is not set
+# CONFIG_CAMERA_MMS_V31 is not set
+CONFIG_CAMERA_MMS_V21=y
 # CONFIG_CAMERA_AAS_V51 is not set
 # CONFIG_CAMERA_FXT_V41 is not set
 # CONFIG_CAMERA_XXS_VPRO is not set
@@ -3150,7 +3144,7 @@ CONFIG_MALI_PRFCNT_SET_PRIMARY=y
 # ACP (Audio CoProcessor) Configuration
 #
 # CONFIG_DRM_LIB_RANDOM is not set
-CONFIG_EXYNOS_HDR_TUNABLE_TONEMAPPING=y
+# CONFIG_EXYNOS_HDR_TUNABLE_TONEMAPPING is not set
 
 #
 # Exynos Graphic Devices
@@ -3356,7 +3350,6 @@ CONFIG_SND_SOC_SAMSUNG_EXYNOS9610=y
 CONFIG_SND_SOC_SAMSUNG_VOGUE_RT5665=y
 CONFIG_SND_SOC_SAMSUNG_VOGUE_CS47L15=y
 # CONFIG_SND_SOC_ARNDALE_RT5631_ALC5631 is not set
-# CONFIG_SND_SOC_SAMSUNG_TM2_WM5110 is not set
 CONFIG_SND_SOC_SAMSUNG_AUDIO=y
 CONFIG_SND_SOC_SAMSUNG_ABOX=y
 # CONFIG_SEC_SND_SYNCHRONIZED_IPC is not set
@@ -4344,6 +4337,9 @@ CONFIG_SEC_ABC_HUB_BOOTC=y
 #
 # CONFIG_SEC_ABC_HUB_BOOTC_ENG is not set
 
+#
+# Samsung LABO Options
+#
 # CONFIG_GOLDFISH is not set
 # CONFIG_CHROME_PLATFORMS is not set
 CONFIG_CLKDEV_LOOKUP=y
@@ -4518,7 +4514,6 @@ CONFIG_EXTCON=y
 # Extcon Device Drivers
 #
 # CONFIG_EXTCON_ADC_JACK is not set
-# CONFIG_EXTCON_ARIZONA is not set
 # CONFIG_EXTCON_GPIO is not set
 CONFIG_EXTCON_MADERA=y
 CONFIG_EXTCON_MADERA_INPUT_EVENT=y
@@ -4931,9 +4926,10 @@ CONFIG_AFC_CHARGER_MODE=y
 # CONFIG_STORE_MODE is not set
 # CONFIG_SW_SELF_DISCHARGING is not set
 CONFIG_BATTERY_AGE_FORECAST=y
+# CONFIG_ENG_BATTERY_CONCEPT is not set
 # CONFIG_QH_ALGORITHM is not set
 CONFIG_BATTERY_NOTIFIER=y
-CONFIG_ENABLE_100MA_CHARGING_BEFORE_USB_CONFIGURED=y
+# CONFIG_ENABLE_100MA_CHARGING_BEFORE_USB_CONFIGURED is not set
 # CONFIG_FUELGAUGE_DUMMY is not set
 CONFIG_FUELGAUGE_S2MU106=y
 CONFIG_BATTERY_SWELLING=y
@@ -5038,6 +5034,9 @@ CONFIG_SEC_DEBUG_SOFTDOG=y
 CONFIG_SEC_MISC=y
 # CONFIG_SEC_HQM_DEVICE is not set
 
+#
+# Samsung TSP Logging Options
+#
 CONFIG_SEC_PM_BIGDATA=y
 
 #
@@ -5072,8 +5071,8 @@ CONFIG_SENSORS_SSP=y
 # CONFIG_SENSORS_SSP_A51 is not set
 # CONFIG_SENSORS_SSP_XCOVERPRO is not set
 # CONFIG_SENSORS_SSP_GTA4XL is not set
-CONFIG_SENSORS_SSP_M31=y
-# CONFIG_SENSORS_SSP_M21 is not set
+# CONFIG_SENSORS_SSP_M31 is not set
+CONFIG_SENSORS_SSP_M21=y
 # CONFIG_SENSORS_SSP_M31S is not set
 # CONFIG_SENSORS_SSP_GYROFILE_FOR_MAG is not set
 CONFIG_SENSORS_A96T3X6=y
@@ -5097,28 +5096,28 @@ CONFIG_SENSORS_A96T3X6_M31=y
 CONFIG_SENSORS_SSP_ACCELOMETER=y
 CONFIG_SENSORS_SSP_GYROSCOPE=y
 CONFIG_SENSORS_SSP_MAGNETIC=y
-# CONFIG_SENSORS_SSP_PROXIMITY is not set
-CONFIG_SENSORS_SSP_LIGHT=y
+CONFIG_SENSORS_SSP_PROXIMITY=y
+# CONFIG_SENSORS_SSP_LIGHT is not set
 # CONFIG_SENSORS_SSP_BAROMETER is not set
 # CONFIG_SENSORS_SSP_MOBEAM is not set
-# CONFIG_SENSORS_SSP_ACCELOMETER_ICM42605M is not set
-CONFIG_SENSORS_SSP_ACCELOMETER_LSM6DSL=y
+CONFIG_SENSORS_SSP_ACCELOMETER_ICM42605M=y
+# CONFIG_SENSORS_SSP_ACCELOMETER_LSM6DSL is not set
 # CONFIG_SENSORS_SSP_ACCELOMETER_K6DS3TR is not set
-# CONFIG_SENSORS_SSP_GYROSCOPE_ICM42605M is not set
-CONFIG_SENSORS_SSP_GYROSCOPE_LSM6DSL=y
+CONFIG_SENSORS_SSP_GYROSCOPE_ICM42605M=y
+# CONFIG_SENSORS_SSP_GYROSCOPE_LSM6DSL is not set
 # CONFIG_SENSORS_SSP_GYROSCOPE_K6DS3TR is not set
 CONFIG_SENSORS_SSP_MAGNETIC_AK09918C=y
 # CONFIG_SENSORS_SSP_MAGNETIC_AK09916C is not set
 # CONFIG_SENSORS_SSP_MAGNETIC_LSM303AH is not set
 # CONFIG_SENSORS_SSP_MAGNETIC_MMC5603 is not set
 # CONFIG_SENSORS_SSP_PROXIMITY_AUTO_CAL_TMD3725 is not set
-# CONFIG_SENSORS_SSP_PROXIMITY_STK3X3X is not set
+CONFIG_SENSORS_SSP_PROXIMITY_STK3X3X=y
 # CONFIG_SENSORS_SSP_PROXIMITY_GP2AP110S is not set
 # CONFIG_SENSORS_SSP_PROXIMITY_FACTORY_CAL_THRESH is not set
 # CONFIG_SENSORS_SSP_PROXIMITY_FACTORY_CAL_OFFSET is not set
 # CONFIG_SENSORS_SSP_LIGHT_TMD3725 is not set
 # CONFIG_SENSORS_SSP_LIGHT_TMD3700 is not set
-CONFIG_SENSORS_SSP_LIGHT_TCS3701=y
+# CONFIG_SENSORS_SSP_LIGHT_TCS3701 is not set
 # CONFIG_SENSORS_SSP_LIGHT_VEML3328 is not set
 # CONFIG_SENSORS_SSP_LIGHT_CM32183 is not set
 # CONFIG_SENSORS_SSP_LIGHT_STK3X6X is not set
@@ -5139,6 +5138,9 @@ CONFIG_VIBRATOR_S2MU106=y
 CONFIG_SENSORS_FINGERPRINT=y
 CONFIG_SENSORS_ET5XX=y
 # CONFIG_SENSORS_ET7XX is not set
+CONFIG_TZIC=y
+CONFIG_TZIC_USE_TZDEV=y
+# CONFIG_TZIC_DEFAULT is not set
 CONFIG_SPU_VERIFY=y
 
 #
@@ -5204,6 +5206,7 @@ CONFIG_FILE_LOCKING=y
 CONFIG_MANDATORY_FILE_LOCKING=y
 CONFIG_FS_ENCRYPTION=y
 CONFIG_FS_INLINE_ENCRYPTION=y
+CONFIG_FSCRYPT_SDP=y
 CONFIG_FSNOTIFY=y
 CONFIG_DNOTIFY=y
 CONFIG_INOTIFY_USER=y
